--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,7 +1,35 @@
+:root {
+  --primary-color: #222260;
+  --primary-color2: "color: rgba(34, 34, 96, .6)";
+  --primary-color3: "color: rgba(34, 34, 96, .4)";
+  --color-green: #42ad00;
+  --color-grey: #aaa;
+  --color-accent: #f56692;
+  --color-delete: #ff0000;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  list-style: none;
+}
+
+body {
+  font-family: "Nunito", sans-serif;
+  font-size: clamp(1rem, 1.5vw, 1.2rem);
+  overflow: hidden;
+  color: rgba(34, 34, 96, 0.6);
+  background-image: url("/bg.png");
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--primary-color);
 }
 
 html,
