add styles to navigation

--- a/frontend/src/app/(components)/Orb/Navigation/Navigation.module.css
+++ b/frontend/src/app/(components)/Orb/Navigation/Navigation.module.css
@@ -68,3 +68,21 @@
   font-size: 1.4rem;
   transition: all 0.4s ease-in-out;
 }
+
+.active {
+  color: rgba(34, 34, 96, 1) !important;
+}
+.active i {
+  color: rgba(34, 34, 96, 1) !important;
+}
+
+.active::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 4px;
+  height: 100%;
+  background: #222260;
+  border-radius: 0 10px 10px 0;
+}
